Updated remaining auth functions and fixed updateing department links
