# server/src/auth/AuthService.ts
@@ -1,22 +1,18 @@
 import * as bcrypt from "bcryptjs";
 import * as crypto from "node:crypto";
 import { MemberMapper } from "../resources/members/MemberMapper";
-import MembersRepository from "../resources/members/MembersRepository";
 import {
   MemberHasDirectorPositionRepository_typeORM,
   MembersRepository_typeORM,
 } from "../resources/members/MembersRepository_typeORM";
-import { JWTPayload, PermissionDTO, UserLoginRequest } from "../typeOrm/types/authTypes";
+import { JWTPayload, PermissionDTO, UserLoginRequest, UserChangePasswordRequest } from "../typeOrm/types/authTypes";
 import { ExpiredTokenError, NotFoundError, UnauthenticatedError } from "../types/Errors";
-import { UserChangePasswordRequest } from "../types/authTypes";
-import { createCurrentTimestamp } from "../utils/dateUtils";
+import { getDateDifferenceInDays } from "../utils/dateUtils";
 import { sleepRandomly } from "../utils/timeUtils";
-import AuthRepository from "./AuthRepository";
+import { PasswordResetRepository_typeORM } from "./PasswordResetRepository_typeORM";
+import { DepartmentRepository_typeORM } from "../resources/members/DepartmentRepository_typeORM";
 
 class AuthService {
-  authRepository = new AuthRepository();
-  membersRepository = new MembersRepository();
-
   /**
    * Logs a user in
    * @throws UnauthenticatedError if the credentials are incomplete
@@ -28,7 +24,6 @@ class AuthService {
     }
 
     const user = await MembersRepository_typeORM.getMemberByNameWithPermissions(userLogin.username);
-
     if (user === null) {
       // Sleep to prevent oracle attacks (guessing if a user exists by looking at the response time)
       sleepRandomly(50, 110);
@@ -90,6 +85,7 @@ class AuthService {
     const newPasswordHash = await bcrypt.hash(userChangePasswordRequest.newPassword, 10);
 
     await MembersRepository_typeORM.updateUserPasswordByUserNameAndUserID(
+      userChangePasswordRequest.userName,
       userChangePasswordRequest.userID,
       newPasswordHash
     );
@@ -100,7 +96,7 @@ class AuthService {
    * @param email The email of the password reset entry
    */
   createPasswordResetToken = async (name: string, email: string): Promise<string> => {
-    const user = await this.authRepository.getUserByName(name);
+    const user = await MembersRepository_typeORM.getMemberByName(name);
 
     if (user === null) {
       // Sleep to prevent oracle attacks (guessing if a user exists by looking at the response time)
@@ -112,10 +108,10 @@ class AuthService {
     const token = crypto.randomBytes(64).toString("base64url");
 
     // Delete old entrys, if any exist
-    await this.authRepository.deletePasswordResetEntriesByEmail(email);
+    await PasswordResetRepository_typeORM.deletePasswordResetEntriesByEmail(email);
 
     // Insert the values into the passwort_reset table
-    await this.authRepository.createPasswordResetEntry(email, "salt", token);
+    await PasswordResetRepository_typeORM.createPasswordResetEntry(email, "salt", token);
 
     return token;
   };
@@ -128,30 +124,29 @@ class AuthService {
    * @param newPassword The new password of the user
    */
   resetPasswordWithToken = async (name: string, email: string, token: string, newPassword: string): Promise<void> => {
-    // Get current date
-    const date = createCurrentTimestamp();
-
-    const passwordResetEntry = await this.authRepository.getPasswordReserEntryByEmailAndToken(date, email, token);
+    const passwordResetEntry = await PasswordResetRepository_typeORM.getPasswordResetEntryByEmailAndToken(email, token);
 
     if (passwordResetEntry === null) {
       throw new NotFoundError(`No password reset entry found with email ${email} and token ${token}`);
     }
 
-    const user = await this.authRepository.getUserByName(name);
+    const user = await MembersRepository_typeORM.getMemberByName(name);
 
     if (user === null) {
       throw new NotFoundError(`No user found with name ${name}`);
     }
 
+    const timeDiff = getDateDifferenceInDays(passwordResetEntry.date, new Date());
+
     // Check if the entry is older than five days
-    if (passwordResetEntry.datediff <= -6) {
-      await this.authRepository.deletePasswordResetEntriesByEmail(email);
+    if (timeDiff <= -6) {
+      await PasswordResetRepository_typeORM.deletePasswordResetEntriesByEmail(email);
       throw new ExpiredTokenError("Token already expired");
     }
 
     const newPasswordHash = await bcrypt.hash(newPassword, 10);
-    await this.authRepository.updateUserPasswordByUserNameAndUserID(name, user.mitgliedID, newPasswordHash);
-    await this.authRepository.deletePasswordResetEntriesByEmail(email);
+    await MembersRepository_typeORM.updateUserPasswordByUserNameAndUserID(name, user.memberId, newPasswordHash);
+    await PasswordResetRepository_typeORM.deletePasswordResetEntriesByEmail(email);
   };
 
   /**
@@ -159,18 +154,11 @@ class AuthService {
    * @param roles Array of roles of the user
    */
   isUserAuthorizedForDepartment = async (roles: number[], departmentID: number): Promise<boolean> => {
-    const departments = await this.membersRepository.getDepartmentsByRoles(roles);
-
+    const departments = await DepartmentRepository_typeORM.getDepartmentsByRoles(roles);
     if (departments === null) {
       return false;
     }
-
-    for (let i = 0; i < departments.length; i++) {
-      if (departments[i].ressortID === departmentID) {
-        return true;
-      }
-    }
-    return false;
+    return departments.some((department) => department.departmentId === departmentID);
   };
 }
 
